
      \item There is a new function \code{Sys.setFileTime()} to set the
      time of a file (including a directory).

      \item The file times reported by \code{file.info()} are reported
      to sub-second resolution on systems which support it.  (Currently
      the POSIX 2008 and FreeBSD/Darwin/NetBSD methods are detected.)

      \item New function \code{getCall(m)} as an abstraction for
      \code{m$call}, enabling \code{update(m)}'s default method to apply
      more universally.  (NB: this can be masked by existing functions
      in packages.)

      \item \code{Sys.info()} gains a \code{euser} component to report
      the \sQuote{effective} user on OSes which have that concept.

      \item The result returned by \code{try()} now contains the
      original error condition object at the \code{"condition"}
      attribute.

      \item All packages are lazy-loaded irrespective of the
      \samp{LazyLoad} field in the \file{DESCRIPTION} file.
      (Experimental: documentation is not yet updated.)
      
      \item Added new \samp{\figure} tag to Rd markup, so
      that figures can be included in help pages when displayed
      in HTML or LaTeX.  There is an example in the help page for
      \code{points()}.
      
      \item The built-in httpd server now allows access to files
      in the session temporary directory \code{tempdir()},
      addressed as the \samp{/session} directory on the httpd
      server.
      
      \item Development versions of \R are no longer referred to by the
      number under which they might be released, e.g. in the startup
      banner, \command{R --version} and \code{sessionUtils()}.  The
      correct way to refer to a development version of R is
      \sQuote{R-devel}, preferably with the date and SVN version number.\cr
      E.g. \samp{R-devel (2011-07-04 r56266)}
      
      \item There is a new function \code{texi2pdf()} in package
      \pkg{tools}, currently a convenience wrapper for