@@ -112,7 +112,7 @@ massageExamples <-
 }
 
 ## compares 2 files
-Rdiff <- function(from, to, useDiff = FALSE, forEx = FALSE, Log=FALSE)
+Rdiff <- function(from, to, useDiff = FALSE, forEx = FALSE, nullPointers=TRUE, Log=FALSE)
 {
     clean <- function(txt)
     {
@@ -124,6 +124,9 @@ Rdiff <- function(from, to, useDiff = FALSE, forEx = FALSE, Log=FALSE)
         ## remove BATCH footer
         nl <- length(txt)
         if(grepl("^> proc.time()", txt[nl-2L])) txt <- txt[1:(nl-3L)]
+        if (nullPointers) 
+        ## remove pointer addresses from listings
+            txt <- gsub("<(environment|bytecode|pointer|promise): 0x[[:xdigit:]]{8}>", "<\\1: 0x00000000>", txt)
         ## regularize fancy quotes.  First UTF-8 ones:
         txt <- gsub("(\xe2\x80\x98|\xe2\x80\x99)", "'", txt,
                       perl = TRUE, useBytes = TRUE)
@@ -640,7 +643,7 @@ detachPackages <- function(pkgs, verbose = TRUE)
 
     left <- args[1L]
     if(left == "-") left <- "stdin"
-    status <- tools::Rdiff(left, args[2L], TRUE)
+    status <- tools::Rdiff(left, args[2L], useDiff = TRUE)
     if(status) status <- exitstatus
     do_exit(status)
 }
